--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Sunshine Watch Face</string>
     <string name="my_digital_name">Sunshine</string>
+    <string name="my_analog_name">My Analog</string>
+    <string name="info_not_available">Info not available!</string>
 </resources>
